<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.fuchsi.insulinPumpDiary.activity.AddNewEntryActivity">
    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="Done"
        android:icon="@drawable/ic_done_black_24dp" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_string"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_shift"
        android:title="@string/shift_string"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_done_black_24dp" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/copy_string"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_content_copy_black_24dp" />

</menu>